# DjangoRestProject

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
apps/pizza/: apps.py  filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/pizza/migrations/: 0001_initial.py  0002_pizzamodel_pizza_shop.py  0004_alter_pizzamodel_name_alter_pizzamodel_price.py
apps/pizza_shop/: models.py  views.py
apps/user/: managers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
backend/: manage.py
backend/apps/auth/: apps.py  urls.py
backend/apps/pizza/: models.py  urls.py  views.py
backend/apps/pizza/migrations/: 0001_initial.py  0003_alter_pizzamodel_options_pizzamodel_day_and_more.py
backend/apps/pizza_shop/: models.py  serializer.py  urls.py  views.py
backend/apps/pizza_shop/migrations/: 0001_initial.py  0002_alter_pizzashopmodel_name.py
backend/apps/user/: models.py  serializers.py
backend/configs/: settings.py  urls.py
backend/configs/extra_conf/: jwt_conf.py  rest_conf.py
backend/core/enums/: regex_enum.py
backend/core/management/commands/: wait_db.py
client/: asset-manifest.json  index.html
client/static/js/: main.adce2208.js  main.adce2208.js.map
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: pagination.py
frontend/src/: App.js
