[tool.poetry]
name = "djangorestproject"
version = "0.1.0"
description = ""
authors = ["OlegMatus <129312840+OlegMatus@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
